# vllm-cpu

./: .dockerignore  .env.template  .gitignore  BUILD_CLEANUP_CHANGES.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.txt  Dockerfile  Dockerfile.buildx  DockerfileModifier.sh  PYPI_README.md  README.md  amxbf16_README.md  avx512_README.md  avx512bf16_README.md  avx512vnni_README.md  build_and_verify.sh  build_config.json  build_multipy_wheels.sh  build_wheels.sh  cpu_platform_fix.py  docker-build-optimized.sh  docker-build.sh  docker-buildx.sh  enhance_scripts.py  generate_package_metadata.py  noavx512_README.md  publish_to_pypi.sh  pyproject.toml  reorganize_dist.py  state.json  test_and_publish.sh  verify_cleanup.sh  wheel-state.json
.github/: HANDOFF-PROMPT.md  PLAN-cpu-non-unified-fixes.md  dependabot.yml
.github/scripts/: fetch-releases-pypi.sh  fetch-releases.sh  fetch-upstream-releases.sh  lib-retry.sh  normalize-dispatch-inputs.sh  patch-pyproject-metadata.py  preflight-shell-tests.sh  registry-sync.sh  test-api-key-validation.sh  test-runtime-behavior.sh
.github/workflows/: _build-wheel-job.yml  _check-versions-docker.yml  _check-versions.yml  _publish-pypi.yml  _update-release-notes.yml  auto-docker.yml  auto-update.yml  build-and-publish.yml  build-cpu-wheel.yml  build-docker-image.yml  build-multiarch.yml  build-wheel.yml  docker-publish.yml  keep-alive.yml  (+4 more)
cpu_detect/: README.md  setup.py  vllm_cpu_detect.py
docker/: --README.md  Dockerfile  README.md  banner.sh  cleanup.sh  detect_python_version.sh  docker-compose.yml  entrypoint.sh  example-README.md  restore_torch_headers.sh  setup_vllm.sh
docker-experimental/: README.md
docs/: AUTO_DEPENDENCY_INSTALLATION.md  BUILD_ALL_VARIANTS.md  CONSOLIDATION_NOTES.md  DEPLOYMENT_CHECKLIST.md  DOCKER_OPTIMIZATION_REPORT.md  DRY_RUN_FEATURE.md  DUPLICATE_PREVENTION_FEATURE.md  DYNAMIC_VERSION_DETECTION.md  ENHANCEMENTS_APPLIED.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_STATUS.md  INSTALLATION.md  MULTI_WHEEL_GITHUB_RELEASES.md  MULTI_WHEEL_SUPPORT.md  PROJECT_DIRECTORY_STRUCTURE.md  PYPI_PUBLISHING_GUIDE.md  PYTORCH_CPU_CHANGES_SUMMARY.md  PYTORCH_CPU_DEPENDENCY.md  PYTORCH_VERSION_VERIFICATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_PYPI.md  REPO_CACHING_SUMMARY.md  SECURITY_FIXES.md  SESSION_ENHANCEMENTS_SUMMARY.md  SESSION_SUMMARY.md  SKIP_LOGIC_SUMMARY.md  TEST_AND_PUBLISH.md  TEST_PUBLISH_FEATURES_SUMMARY.md  TORCHVISION_TORCHAUDIO_REQUIRED.md  VARIANT_ALL_SUMMARY.md  VLLM_REPO_CACHING.md
package_templates/: README_template.md
patches/: arm64_cmake_patch.sh  force_avx512_cmake_patch.sh
resources/: pypi-builder.sh  setup_vllm_debian_trixie.sh
(+5 files in other folders)
